<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mActivity.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_alignParentLeft="true"
                        android:id="@+id/Ivback"
                        android:layout_width="@dimen/_27sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:layout_gravity="left"
                        android:src="@drawable/ic_backerrow_black"
                        android:tint="@color/colorPrimary" />

                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/contactus"></ImageView>

                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="Contact Us"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/contact_desc" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:text="Email" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_background"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:text="Name" />

                <EditText
                    android:id="@+id/etname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_background"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:singleLine="true" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:text="Message" />

                <EditText
                    android:id="@+id/et_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_background"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="10"
                    android:overScrollMode="always"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:singleLine="false"></EditText>

                <TextView
                    android:id="@+id/tvSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@drawable/round_corner_background"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="Send"
                    android:textColor="#FFF"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"></View>

                    <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/help1"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:text="@string/help1_solution"></TextView>

                        <TextView
                            android:id="@+id/tv_help1_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:text="@string/help1_link"></TextView>
                    </LinearLayout>

                    <View
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"></View>

                    <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/help2"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:text="@string/help2_solution"></TextView>

                        <TextView
                            android:id="@+id/tv_help2_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:text="@string/help2_link"></TextView>

                        <TextView
                            android:id="@+id/tv_help21_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:text="@string/help21_link"></TextView>
                    </LinearLayout>

                    <View
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"></View>

                    <LinearLayout
                        android:layout_marginBottom="@dimen/_17sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/help3"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:text="@string/help3_solution"></TextView>

                        <TextView
                            android:id="@+id/tv_help3_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_7sdp"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:layout_marginBottom="@dimen/_7sdp"
                            android:text="@string/help3_link"></TextView>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</LinearLayout>